# renamer-rust

./: Cargo.toml
src/: arguments.rs  fileutils.rs  img_renamer.rs  main.rs  videos_renamer.rs
